# photosight

./: .env.example  .gitignore  Dockerfile  GIT-ARCHITECTURE-SUMMARY.md  QUICKSTART.md  README.md  album_inserts.sql  alembic.ini  all_remaining_batches.sql  batch_01.sql  batch_02.sql  batch_03.sql  batch_04.sql  batch_05.sql  batch_06.sql  batch_07.sql  batch_gdrive_updates.sql  batch_move_photos.py  cli.py  complete_albums.sql  complete_gdrive_batch_updates.sql  config.yaml  configure_domain_delegation.py  create_and_share_photosight_folder.py  create_shared_drive.py  ensure_raw_masters.py  execute_all_gdrive_updates.py  execute_gdrive_updates.py  generate_gdrive_update_sql.py  migrate_local_photos_to_unified.py  move_existing_photos.py  package-lock.json  package.json  photo_inserts.sql  photosight_gdrive_config.env  photosight_gdrive_update.sql  photosight_gdrive_update_fixed.sql  process_workshop_basic.py  pyproject.toml  railway.json  (+16 more)
.claude/commands/: push.md  safe-push.md
.github/workflows/: claude-code-review.yml
alembic/versions/: 001_add_promoted_exif_fields.py  002_add_project_management.py  007_add_photo_recipes.py  008_fix_project_schema.py  009_add_hybrid_sync_fields.py
docs/: MCP_SERVER.md
enneagram_analysis_output/: enneagram_rankings.csv
photosight/: __init__.py  config.py
photosight/analysis/: __init__.py  aesthetic_analyzer.py  blur_recovery.py  composition_analyzer.py  improved_blur_detection.py  stats_generator.py  technical.py  technical_analyzer.py  vision_llm_analyzer.py
photosight/api/: __init__.py  album_routes.py  app.py  auth.py  batch_processor.py  batch_processor_celery.py  celery_app.py  chunked_upload.py  models.py  models_pydantic.py  models_unified.py  photo_routes.py  routes.py  routes_documented.py  session_manager.py  swagger_config.py  tasks.py  tasks_improved.py  web_routes.py  websocket_events.py  websocket_events_improved.py
photosight/cli/: db_commands.py  project_commands.py  recipe_commands.py
photosight/config/: __init__.py  security.py
photosight/core/: unified_processor.py
photosight/db/: __init__.py  album_utils.py  camera_profile_migration.py  connection.py  dual_database_manager.py  guid_photo_system.py  mcp_operations.py  models.py  multi_schema_manager.py  operations.py  oracle_config.py  performance_indexes.py  photo_importer.py  processing_integration.py  recipe_manager.py
photosight/io/: __init__.py  filesystem.py  photos_library.py  raw.py  raw_test.py
photosight/mcp/: __init__.py  api_tools.py  project_tool.py  query_builder.py  resources.py  security.py  server.py  server_old.py  tools.py
photosight/plugins/: __init__.py  base.py  loader.py  manager.py
photosight/preview/: __init__.py  memory_manager.py  models.py  preview_processor.py  preview_system.py  proxy_manager.py  threading_manager.py
photosight/processing/: __init__.py  analysis_context.py  concurrent_pipeline.py  history.py  production_yolo_blur_processor.py  queue_integration.py  raw_processor.py  scene_classifier.py  sharpening.py  sony_a7m3_config.py  yolo_integration.py
photosight/ranking/: __init__.py  quality_ranker.py
photosight/selection/: __init__.py  advanced_selector.py
photosight/smart_albums/: __init__.py  query_engine.py
photosight/storage/: __init__.py  abstract.py  gdrive_api_manager.py  gdrive_delegation_manager.py  gdrive_manager.py  gdrive_photo_server.py
photosight/utils/: __init__.py  async_processing.py  caching.py  file_organizer.py  file_protection.py  logging.py  xmp_sidecar.py
scripts/: analyze-enneagram-batch.py  analyze_enneagram_full.py  analyze_enneagram_simple.py  batch_import_mcp.py  claude-review-pr.js  complete_import.py  create_enneagram_albums.py  demo_performance_pipeline.py  demo_performance_simple.py  deploy-railway.sh  execute_all_batches.py  import_all_enneagram_photos.py  import_enneagram_photos.py  llm-providers.js  llm-review-pr.js  load-secrets.sh  safe-push.sh  setup-secrets.sh  setup_gdrive_storage.py  show_top_photos.py  test-enneagram-vision.py  test-gemini-simple.py  test-llm-providers.js  test-vision-focused.py  test-vision-llm.py  verify_pipeline.py
tests/: test_api_comprehensive.py  test_local_adjustments.py  test_noise_reduction.py
yolo_decision_examples/: README.md
(+44 files in other folders)
