[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photosight"
version = "0.1.0"
description = "Intelligent RAW photo processing pipeline with scene-aware analysis"
readme = "README.md"
authors = [
    {name = "Sam", email = "sam@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core image processing
    "rawpy>=0.18.1",
    "numpy<2.0",  # Pin to 1.x for compatibility
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    
    # Metadata handling
    "PyExifTool>=0.5.5",
    
    # CLI and configuration
    "click>=8.1.0",
    "PyYAML>=6.0",
    "tqdm>=4.65.0",
    
    # Database integration
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    
    # Computer vision and AI
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "mediapipe>=0.10.0",
    "ultralytics>=8.0.0",
    
    # Vision LLM providers
    "google-generativeai>=0.8.0",
    
    # API and web framework
    "flask>=2.3.3",
    "flask-cors>=4.0.0",
    "flask-socketio>=5.3.4",
    "python-socketio>=5.9.0",
    "flasgger>=0.9.7.1",
    "flask-swagger-ui>=4.11.1",
    
    # Data validation
    "pydantic>=2.4.2",
    "pydantic[email]>=2.4.2",
    
    # Background tasks
    "celery>=5.3.4",
    "redis>=5.0.1",
    "kombu>=5.3.2",
    
    # Authentication
    "pyjwt>=2.8.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.1",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "pytest-flask>=1.2.0",
    "pytest-mock>=3.11.1",
    "factory-boy>=3.3.0",
    "faker>=19.6.2",
    "ruff>=0.1.0",
    "bandit>=1.7.5",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "ipython>=8.0.0",
]

production = [
    "gunicorn>=21.2.0",
    "gevent>=23.9.1",
    "eventlet>=0.33.3",
    "flower>=2.0.1",  # Celery monitoring
    "prometheus-client>=0.17.1",
    "sentry-sdk[flask]>=1.32.0",
]

color = [
    "colorlog>=6.7.0",
]

[project.scripts]
photosight = "photosight.cli:main"

[project.urls]
"Homepage" = "https://github.com/samscarrow/photosight"
"Bug Tracker" = "https://github.com/samscarrow/photosight/issues"

[tool.setuptools]
packages = ["photosight"]
include-package-data = true

[tool.setuptools.package-data]
photosight = ["config.yaml", "*.yaml", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=photosight --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "migrations",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "migrations/",
    "tests/",
]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101"]  # assert_used